--- a/package.json
+++ b/package.json
@@ -14,13 +14,23 @@
     "runQuery": "babel-node ./src/utils/runQuery"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "bcrypt": "^5.0.1",
     "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
+    "cors": "^2.8.5",
+    "debug": "^4.3.2",
     "dotenv": "^10.0.0",
+    "email-validator": "^2.0.4",
     "express": "~4.16.1",
+    "helmet": "^4.6.0",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^8.5.1",
+    "libphonenumber-js": "^1.9.22",
+    "moment": "^2.29.1",
     "morgan": "~1.9.1",
-    "pg": "^8.6.0"
+    "nodemailer": "^6.6.3",
+    "pg": "^8.6.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.8",
